# campaign

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  tox.ini
src/campaign/: __init__.py  main.py
src/campaign/api/models/: __init__.py
src/campaign/models/: hex.py
tests/campaign/: test_api.py
tests/campaign/models/: test_hex.py
