[tool.poetry]
name = "campaign"
version = "0.1.0"
description = "An application with tools for running dungeons and dragons campaigns"
authors = ["Zane DuFour <zane.dufour@gmail.com>"]
license = "MIT"
packages = [
    { include = "campaign", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
campaign = "campaign.main:run"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
