[tool.poetry]
name = "campaign"
version = "0.1.0"
description = "An application with tools for running dungeons and dragons campaigns"
authors = ["Zane DuFour <zane.dufour@gmail.com>"]
license = "MIT"
packages = [{ include = "campaign", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
httpx = "^0.16.1"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
requests = "^2.25.1"

[tool.poetry.scripts]
campaign = "campaign.main:run"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
